deployment/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: letterpad-demo
spec:
  type: LoadBalancer
  selector:
    app: letterpad-demo
  ports:
    - protocol: TCP
      port: 4040
      targetPort: 4040
