deployment/40-ingress.yaml
---
apiVersion: "extensions/v1beta1"
kind: Ingress
metadata:
  name: letterpad-demo
spec:
  backend:
    serviceName: letterpad-demo
    servicePort: 4040
